@@ -1,0 +1,11 @@
+Package: RcppGSLExample
+Title: A really simple example of using RcppGSL in a package
+Version: 0.0.1
+Date: $Date$
+Author: Dirk Eddelbuettel and Romain Francois
+Maintainer: Dirk Eddelbuettel and Romain Francois <RomainAndDirk@r-enthusiasts.com>
+Description: Examples for Seamless R, C++ and GSL integration
+Depends: R (>= 2.11.0), Rcpp (>= 0.8.4)
+LinkingTo: Rcpp, RcppGSL
+URL: http://dirk.eddelbuettel.com/code/rcpp.html, http://romainfrancois.blog.free.fr/index.php?category/R-package/Rcpp
+License: GPL (>= 2)
