@@ -1,0 +1,3 @@
+useDynLib(RcppGSLExample)
+
+export(colNorm)
